# tts-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/tts_service/: __main__.py  api.py  config.py
src/tts_service/engines/: __init__.py  base.py  coqui.py  piper.py
src/tts_service/models/: tts_config.json  voices.json
src/tts_service/utils/: cache.py  dependencies.py  emotions.py  logging.py  prosody.py  text_norm.py
tests/: test_api_stub.py  test_text_norm.py
